--- a/boostrap/ejercicio3/css/custom.css
+++ b/boostrap/ejercicio3/css/custom.css
@@ -1,24 +1,99 @@
-.verde{
+.header{
     background-color: greenyellow;
     border: 1px solid black;
+    font-style: italic;
+    text-align: center;
 
 }
 p{
 color: black;
 
 }
-.rojo{
-    background-color: red;
-    border: 1px solid black;
-    text-align: center;
-}
+
 .amarillo1{
     background-color: yellow;
     border: 1px solid black;
-    text-align: right;
+    text-align: center;
 }
 .amarillo2{
     background-color: yellow;
     border: 1px solid black;
+    text-align: center;
+
+    
+}
+.uno{
+    background-color: red;
+    text-align: left;
+    min-height: 100px;
+    font-size: 70px;
+    border: 1px solid black;
+
+}
+.dos{
+    text-align: center;
+    min-height: 100px;
+    font-size: 70px;
+    border: 1px solid black;
+    background-color: aqua;
+
+
+
+
+}
+.tres{
+    text-align: right;
+    min-height: 100px;
+    font-size: 70px;
+    border: 1px solid black;
+    background-color: red;
+}
+@media screen and (min-width: 576px) {
+    .header{
+        background-color: aqua;
+        text-align: left;
+    }
+    .uno, .dos{
+        min-height: 100px;
+        padding: 15px;
+    
+    }
+    .dos{
+        border: 1px solid black;
+        background-color: red;
+        text-align: right;
+    
+    }
+    .tres{
+       text-align: center;
+        background-color: greenyellow;
+    }
+    
+}
+@media screen  and (min-width: 768px) {
+    .header{
+        background-color: greenyellow;
+        text-align: left;
+    }
+    .uno, .dos, .tres{
+        min-height: 200px;
+        padding: 15px;
+        background-color: red;
+        text-align: center;
+        border: 1px solid black;
+
+
+    
+    }
+    .amarillo1{
+        background-color: yellow;
+        text-align: right;
+        border: 1px solid black;
+    }
+    .amarillo2{
+        background-color: yellow;
+        text-align: left;
+        border: 1px solid black;
+    }
     
 }
