--- a/boostrap/ejercicio4/css/custom.css
+++ b/boostrap/ejercicio4/css/custom.css
@@ -1,15 +1,35 @@
-.col-12{
-    border: 1px solid black;
+@import url('https://fonts.googleapis.com/css2?family=Macondo&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+
+.h1,h2,h3{
+    font-family: "Macondo", serif;
+  font-weight: 400;
+  font-style: normal;
 }
+p{
+    font-family: "Playwrite IN", serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-style: normal;
+}
+.textoCarrusel{
+    font-family: "Caveat", serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 24px; /* Ajusta el tamaño según sea necesario */
+}
+
 .navbar {
 
-    background-color:lightpink ;
+    background-color: lavender;
 }
 .nav-link{
-    color: white;
+    color: darkslategray;
 }
 .nav-link:hover{
-    color: black;
+    color: navy;
 }
 .navbar-nav{
     text-align: center;
@@ -21,13 +41,36 @@
 }
 .personal{
     width: 50%; 
+  margin : 10% 25%;
    
 }
+.fondopie{
+
+    background-color: lightcoral;
+    color: white;
+}
+.textoEquipo{
+    text-align: center;
+}
+.fondo1{
+    background-color: lightcyan;
+}
+.fondo2{
+    background-color: lavender;
+}
+
 @media screen and (max-width: 576px) {
     .personal{
         width: 60%;
-        margin: 20% 10% 20% 10%
+        margin: 10% 20%;
         
+    }
+    
+}
+@media screen and (min-width: 768px) {
+    .personal{
+        width: 80%;
+        margin: 10% 10%;
     }
     
 }
